--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -21,4 +21,4 @@ jobs:
       run: npm install --global surge
     
     - name: deploying using surge
-      run: surge ./ mahad-bootcamp2020.surge.sh/ --token $ {{ secrets.SURGE_TOKEN }}
+      run: surge ./ mahad-bootcamp2020.surge.sh --token $ {{ secrets.SURGE_TOKEN }}
