--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       
-    - name: installing node modules
+    - name: installing node
       uses: actions/setup-node@v2-beta
       with:
         node-version: 12 
@@ -21,4 +21,4 @@ jobs:
       run: npm install --global surge
     
     - name: deploying using surge
-      run: surge ./BootCamp2020Samples mahad-bootcamp2020.surge.sh --token $ {{ secrets.SURGE_TOKEN }}
+      run: surge ./ mahad-bootcamp2020.surge.sh --token $ {{ secrets.SURGE_TOKEN }}
